# mkdocs-git-utils

./: 404.html  LICENSE.txt  README.md  index.html  mkdocs.yml  pyproject.toml
.github/: dependabot.yml
docs/: index.md
src/mkdocs_git_utils/: __about__.py  config.py  plugin.py  types.py
tests/: __init__.py
