[tool.poetry]
name = "mkdocs-git-utils"
version = "0.1.0"
description = ""
authors = ["Zeglius <33781398+Zeglius@users.noreply.github.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"
mkdocs = "^1.6.1"
requests = "^2.32.3"
gitpython = "^3.1.43"


[tool.poetry.group.dev.dependencies]
mkdocs-material = "^9.5.36"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.poetry.plugins."mkdocs.plugins"]
git-committers = "mkdocs_git_utils.plugin:GitUtilsPlugin"
